[gd_scene load_steps=4 format=3 uid="uid://btm7k841jk3v3"]

[ext_resource type="Script" path="res://LQGMain/lqg_appbar.gd" id="1_2pmna"]
[ext_resource type="PackedScene" uid="uid://bfenkl8hksk8p" path="res://LQGMain/SpareParts/lqg_highscore-bar.tscn" id="2_ajpas"]
[ext_resource type="PackedScene" uid="uid://clbajsewaf86n" path="res://LQGMain/lqg_button.tscn" id="2_g0741"]

[node name="LQGAppbar" type="Panel"]
custom_minimum_size = Vector2(0, 64)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_2pmna")
stuffContent = ExtResource("2_ajpas")

[node name="RowStuffs" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NavBack" parent="RowStuffs" instance=ExtResource("2_g0741")]
layout_mode = 2
text = "<"
flat = true

[node name="Content" type="Control" parent="RowStuffs"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NavMenu" parent="RowStuffs" instance=ExtResource("2_g0741")]
layout_mode = 2
text = ":"
flat = true

[node name="PopupMenu" type="PopupMenu" parent="."]
position = Vector2i(0, 170)
hide_on_state_item_selection = true
item_count = 3
item_0/text = "AAAAA"
item_1/text = "afa"
item_1/id = 2
item_1/separator = true
item_2/text = "Exit"
item_2/id = 1

[connection signal="pressed" from="RowStuffs/NavBack" to="." method="_on_nav_back_pressed"]
[connection signal="pressed" from="RowStuffs/NavMenu" to="." method="_on_nav_menu_pressed"]
